--- a/css/management.css
+++ b/css/management.css
@@ -562,6 +562,10 @@ header-component.open .header-top .small-nav .hamburger-wrapper .hamburger::befo
   visibility: visible;
 }
 
+.language-options.selectable .options-holder {
+  --size: 0;
+}
+
 .language-option {
   display: inline-block;
   min-width: 1.875rem;
@@ -576,7 +580,9 @@ header-component.open .header-top .small-nav .hamburger-wrapper .hamburger::befo
 }
 
 .selected {
+  display: inline-block;
   cursor: pointer;
+  padding: 10px 0;
 }
 .selected .language-option {
   color: var(--clr-primary-900);
@@ -633,6 +639,9 @@ header-component.open .header-top .small-nav .hamburger-wrapper .hamburger::befo
 .header-bottom .selectable {
   cursor: pointer;
 }
+.header-bottom .selectable .selected {
+  padding: 10px 0;
+}
 .header-bottom .selectable:hover .selected, .header-bottom .selectable.open .selected {
   color: var(--clr-primary-900);
 }
@@ -640,7 +649,7 @@ header-component.open .header-top .small-nav .hamburger-wrapper .hamburger::befo
   fill: var(--clr-primary-900);
 }
 .header-bottom .selectable .options-holder {
-  --size: -10px;
+  --size: 0;
   border-radius: 10px;
   padding: 20px 0;
 }
@@ -972,7 +981,7 @@ footer .contact.flex.start img {
     display: flex;
   }
   footer .logo,
-.logo-image {
+.logo-image-link {
     display: none;
   }
   .header-top .actual-header-top,
@@ -984,6 +993,12 @@ footer .contact.flex.start img {
     border-top: none;
     border-bottom: 1px solid var(--clr-neutral-700);
     gap: 1.25rem;
+  }
+  .header-bottom .selectable .selected {
+    padding: 0;
+  }
+  .header-bottom .selectable .options-holder {
+    --size: -10px;
   }
   .header-bottom span,
 .header-bottom .just-link {
@@ -1625,7 +1640,8 @@ main {
   .club .link-to-files {
     margin-top: 4rem;
   }
-  .club .link-to-files a::after, .club .link-to-files a::before {
+  .club .link-to-files a::after,
+.club .link-to-files a::before {
     width: calc(100% + 1.5rem);
   }
   .card,
