--- a/css/enrollee.css
+++ b/css/enrollee.css
@@ -28,7 +28,7 @@
   --fs-100: 1rem;
   --fs-50: 0.875rem;
   --fs-25: 0.75rem;
-  --inline-padding: clamp(20px, 5vw, 130px);
+  --inline-padding: clamp(20px, 7vw, 130px);
 }
 
 .flex {
@@ -326,10 +326,11 @@ svg {
 
 .block-title {
   font-size: var(--fs-500);
+  font-weight: var(--fw-medium);
   color: var(--clr-primary-900);
   position: relative;
 }
-.block-title::after {
+.block-title:not(.without)::after {
   content: "";
   width: 200vw;
   height: 1px;
@@ -562,6 +563,10 @@ header-component.open .header-top .small-nav .hamburger-wrapper .hamburger::befo
   visibility: visible;
 }
 
+.language-options.selectable .options-holder {
+  --size: 0;
+}
+
 .language-option {
   display: inline-block;
   min-width: 1.875rem;
@@ -578,6 +583,7 @@ header-component.open .header-top .small-nav .hamburger-wrapper .hamburger::befo
 .selected {
   display: inline-block;
   cursor: pointer;
+  padding: 10px 0;
 }
 .selected .language-option {
   color: var(--clr-primary-900);
@@ -1072,5 +1078,101 @@ footer .contact.flex.start img {
   }
   header-component.transparent .search button:hover path {
     fill: var(--clr-accent-700);
+  }
+}
+.block-title.special {
+  font-size: var(--fs-100);
+  color: var(--clr-dark-700);
+  position: relative;
+}
+.block-title.special::after {
+  content: "";
+  width: 200vw;
+  height: 1px;
+  background-color: var(--clr-dark-700);
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.document-list-global-wrapper {
+  margin: 6rem 0 4rem;
+}
+
+.document-list-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  margin-top: 4rem;
+  position: relative;
+}
+.document-list-wrapper::before {
+  content: "";
+  background-color: #FBFBFB;
+  width: 70vw;
+  height: 70%;
+  position: absolute;
+  left: calc(var(--inline-padding) * -1);
+  top: -15%;
+  border-radius: 0px 10px 10px 0px;
+  z-index: -1;
+}
+.document-list-wrapper img {
+  width: 40%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 10px;
+}
+
+.document-list {
+  width: 100%;
+  height: 100%;
+  min-width: 300px;
+}
+.document-list ol {
+  padding-top: 2.1875rem;
+  list-style: none;
+  counter-reset: item;
+}
+.document-list li {
+  counter-increment: item;
+  font-weight: var(--fw-semi-medium);
+  color: var(--clr-primary-900);
+  position: relative;
+  padding-bottom: 10px;
+  padding-left: 5.625rem;
+  border-bottom: 1px solid var(--clr-neutral-700);
+  margin-bottom: 1.5625rem;
+}
+.document-list li:last-child {
+  border-bottom: none;
+}
+.document-list li:before {
+  color: var(--clr-accent-700);
+  font-weight: var(--fw-bold);
+  font-size: var(--fs-300);
+  content: counter(item);
+  text-align: center;
+  display: block;
+  position: absolute;
+  top: -3px;
+  left: 3rem;
+}
+
+.requisit-card .flex.column.star:last-child {
+  margin-top: 2rem;
+}
+
+@media screen and (max-width: 690px) {
+  .dn690 {
+    display: none;
+  }
+  .document-list li {
+    padding: 0 1rem 10px 2.5rem;
+  }
+  .document-list li::before {
+    left: 0;
   }
 }
