--- a/scss/enrollee.scss
+++ b/scss/enrollee.scss
@@ -1,1 +1,104 @@
 @import 'style';
+
+.block-title.special {
+    font-size: var(--fs-100);
+    color: var(--clr-dark-700);
+    position: relative;
+
+    &::after {
+        content: "";
+        width: 200vw;
+        height: 1px;
+        background-color: var(--clr-dark-700);
+        position: absolute;
+        bottom: 0;
+        right: 0;
+    }
+}
+
+.document-list-global-wrapper {
+    margin: 6rem 0 4rem;
+}
+
+.document-list-wrapper {
+    @include flex(space-between, stretch);
+    margin-top: 4rem;
+    position: relative;
+
+    &::before {
+        content: "";
+        background-color: #FBFBFB;
+        width: 70vw;
+        height: 70%;
+        position: absolute;
+        left: calc(var(--inline-padding) * -1);
+        top: -15%;
+        border-radius: 0px 10px 10px 0px;
+        z-index: -1;
+    }
+
+    img {
+        width: 40%;
+        object-fit: cover;
+        border-radius: 10px;
+    }
+}
+
+.document-list {
+    width: 100%;
+    height: 100%;
+    min-width: 300px;
+
+    ol {
+        padding-top: 2.1875rem;
+        list-style: none;
+        counter-reset: item;
+    }
+
+    li {
+        counter-increment: item;
+        font-weight: var(--fw-semi-medium);
+        color: var(--clr-primary-900);
+        position: relative;
+        padding-bottom: 10px;
+        padding-left: 5.625rem;
+        border-bottom: 1px solid var(--clr-neutral-700);
+        margin-bottom: 1.5625rem;
+    }
+
+    li:last-child {
+        border-bottom: none;
+    }
+
+    li:before {
+        color: var(--clr-accent-700);
+        font-weight: var(--fw-bold);
+        font-size: var(--fs-300);
+        content: counter(item);
+        text-align: center;
+        display: block;
+        position: absolute;
+        top: -3px;
+        left: 3rem;
+    }
+}
+
+.requisit-card {
+    .flex.column.star:last-child {
+        margin-top: 2rem;
+    }
+}
+
+@media screen and (max-width: 690px) {
+    .dn690 {
+        display: none;
+    }
+
+    .document-list li {
+        padding: 0 1rem 10px 2.5rem;
+
+        &::before {
+            left: 0;
+        }
+    }
+}
