--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -34,7 +34,8 @@
   --fs-600: 3rem; // 48px
   --fs-550: 2.5rem; // 40px
   --fs-500: clamp(16px, 2rem, 32px); // 32px
-  --fs-400: clamp(16px, 1.875rem, 30px);
+  --fs-400: clamp(16px, 1.875rem, 30px); // 30px
+  --fs-350: clamp(16px, 1.5rem, 24px); // 24px
   --fs-300: clamp(16px, 1.25rem, 20px); // 20px
   --fs-200: clamp(16px, 1.125rem, 18px); // 18px
   --fs-100: 1rem; // 16px
@@ -102,6 +103,10 @@
   margin: 0.625rem 0;
 }
 
+.mY20 {
+  margin: 1.25rem 0;
+}
+
 .mY60 {
   margin: 3.75rem 0;
 }
@@ -112,6 +117,10 @@
 
 .fw-light {
   font-weight: var(--fw-light);
+}
+
+.fw-semi-medium {
+  font-weight: var(--fw-semi-medium);
 }
 
 .fw-bold {
@@ -148,6 +157,10 @@
 
 .fs-300 {
   font-size: var(--fs-300);
+}
+
+.fs-350 {
+  font-size: var(--fs-350);
 }
 
 .fs-400 {
