--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@
   --fs-100: 1rem;
   --fs-50: 0.875rem;
   --fs-25: 0.75rem;
-  --inline-padding: clamp(20px, 5vw, 130px);
+  --inline-padding: clamp(20px, 7vw, 130px);
 }
 
 .flex {
@@ -326,10 +326,11 @@ svg {
 
 .block-title {
   font-size: var(--fs-500);
+  font-weight: var(--fw-medium);
   color: var(--clr-primary-900);
   position: relative;
 }
-.block-title::after {
+.block-title:not(.without)::after {
   content: "";
   width: 200vw;
   height: 1px;
