--- a/scss/enrollee.scss
+++ b/scss/enrollee.scss
@@ -83,22 +83,64 @@
     }
 }
 
+.requisites-wrapper {
+  margin: 4rem 0;
+  gap: clamp(20px, 8vw, 8.4rem);
+}
+
+.logo-big {
+  object-fit: contain;
+  width: clamp(100px, 40%, 250px);
+}
+
+.college-photo {
+  width: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
 .requisit-card {
-    .flex.column.star:last-child {
-        margin-top: 2rem;
+  width: clamp(280px, 100%, 680px);
+  padding: 2.5rem;
+  background-color: var(--clr-neutral-1000);
+  box-shadow: 0px 2px 10px rgba(211, 210, 210, 0.25);
+  border-radius: 10px;
+  .flex.column.start:last-child {
+      margin-top: 2rem;
+  }
+  .info {
+    a {
+      transition: 0.2s ease;
     }
+    &:not(.no-mb) {
+      margin-bottom: 1.5625rem;
+    }
+    &:hover {
+      a {
+        color: var(--clr-primary-900);
+      }
+    }
+    gap: 5px;
+  }
+  .flex.spb {
+    width: 100%;
+    gap: 20px;
+  }
 }
 
 @media screen and (max-width: 690px) {
-    .dn690 {
-        display: none;
-    }
+  .title {
+    margin-top: 70px;
+  }
+  .dn690 {
+      display: none;
+  }
 
-    .document-list li {
-        padding: 0 1rem 10px 2.5rem;
+  .document-list li {
+      padding: 0 1rem 10px 2.5rem;
 
-        &::before {
-            left: 0;
-        }
-    }
+      &::before {
+          left: 0;
+      }
+  }
 }
