--- a/css/student.css
+++ b/css/student.css
@@ -1106,326 +1106,26 @@ footer .contact.flex.start img {
     fill: var(--clr-accent-700);
   }
 }
-.block-title.special {
-  font-size: var(--fs-100);
-  color: var(--clr-dark-700);
-  position: relative;
-}
-.block-title.special::after {
-  content: "";
-  width: 200vw;
-  height: 1px;
-  background-color: var(--clr-dark-700);
-  position: absolute;
-  bottom: 0;
-  right: 0;
-}
-
-.document-list-global-wrapper {
-  margin: 6rem 0 4rem;
-}
-
-.document-list-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: stretch;
-  flex-direction: row;
-  flex-wrap: nowrap;
+.position {
   margin-top: 4rem;
-  position: relative;
-}
-.document-list-wrapper::before {
-  content: "";
-  background-color: #FBFBFB;
-  width: 70vw;
-  height: 70%;
-  position: absolute;
-  left: calc(var(--inline-padding) * -1);
-  top: -15%;
-  border-radius: 0px 10px 10px 0px;
-  z-index: -1;
-}
-.document-list-wrapper img {
-  width: 40%;
-  -o-object-fit: cover;
-     object-fit: cover;
   border-radius: 10px;
+  max-width: calc(100% - var(--inline-padding));
+  background-color: #F8F8F8;
+  padding: 7.75rem 5.625rem 7.75rem var(--inline-padding);
 }
-
-.document-list {
-  width: 100%;
-  height: 100%;
-  min-width: 300px;
-}
-.document-list ol {
-  padding-top: 2.1875rem;
-  list-style: none;
-  counter-reset: item;
-}
-.document-list li {
-  counter-increment: item;
-  font-weight: var(--fw-semi-medium);
-  color: var(--clr-primary-900);
-  position: relative;
-  padding-bottom: 10px;
-  padding-left: 5.625rem;
-  border-bottom: 1px solid var(--clr-neutral-700);
-  margin-bottom: 1.5625rem;
-}
-.document-list li:last-child {
-  border-bottom: none;
-}
-.document-list li:before {
-  color: var(--clr-accent-700);
-  font-weight: var(--fw-bold);
-  font-size: var(--fs-300);
-  content: counter(item);
-  text-align: center;
-  display: block;
-  position: absolute;
-  top: -3px;
-  left: 3rem;
-}
-
-.requisites-wrapper {
-  margin: 4rem 0;
-  gap: clamp(20px, 8vw, 8.4rem);
-}
-
-.logo-big {
-  -o-object-fit: contain;
-     object-fit: contain;
-  width: clamp(100px, 40%, 250px);
-}
-
-.college-photo {
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  border-radius: 10px;
-}
-
-.requisit-card {
-  width: clamp(280px, 100%, 680px);
-  padding: 2.5rem;
-  background-color: var(--clr-neutral-1000);
-  box-shadow: 0px 2px 10px rgba(211, 210, 210, 0.25);
-  border-radius: 10px;
-}
-.requisit-card .flex.column.start:last-child {
-  margin-top: 2rem;
-}
-.requisit-card .info {
-  gap: 5px;
-}
-.requisit-card .info a {
-  transition: 0.2s ease;
-}
-.requisit-card .info:not(.no-mb) {
-  margin-bottom: 1.5625rem;
-}
-.requisit-card .info:hover a {
-  color: var(--clr-primary-900);
-}
-.requisit-card .flex.spb {
-  width: 100%;
-  gap: 20px;
-}
-
-.documents-margin {
-  margin: 8.75rem 0;
-}
-
-.partners-block-wrapper {
-  margin-top: 3.5rem;
-  gap: 1.25rem;
-}
-
-.partners-block {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  width: clamp(280px, 100%, 380px);
-  min-width: 300px;
-  min-height: 150px;
-  text-align: center;
-  gap: 1.875rem;
-  padding-bottom: 2.5rem;
-  background: var(--clr-neutral-1000);
-  box-shadow: 0 0 10px var(--clr-shadow);
-  border-radius: 10px;
-  border: 1px solid transparent;
-  transition: 0.2s ease;
-}
-.partners-block img {
-  height: 50%;
-}
-.partners-block:hover {
-  box-shadow: 0 0 0 transparent;
-  border-color: var(--clr-dark-500);
-}
-
-.gradient-wrapper {
-  width: 100vw;
-  background: linear-gradient(95.56deg, var(--clr-primary-900) 1.52%, #00B2E3 138%);
-  padding: 3.75rem 0;
-}
-.gradient-wrapper .list {
-  margin-top: 3.75rem;
-  color: var(--clr-neutral-1000);
-  margin-left: auto;
-  font-weight: var(--fw-semi-medium);
-}
-.gradient-wrapper .list li {
-  line-height: 1.875rem;
-}
-
-.exclamation-wrapper {
-  width: clamp(280px, 60vw, 850px);
-  margin: 8.75rem auto;
-  font-size: var(--fs-300);
-}
-.exclamation-wrapper .exclamation {
-  color: var(--clr-accent-700);
-  font-size: 8rem;
-  margin-right: 2rem;
-}
-
-.info-in-the-end {
-  margin-top: 4rem;
-  gap: 2rem;
-}
-.info-in-the-end .info {
-  width: 100%;
-}
-.info-in-the-end img.big-img {
-  width: clamp(280px, 40%, 480px);
-}
-
-.padding {
-  padding: 3rem 0 0 3rem;
-  width: clamp(280px, 100%, 525px);
-}
-.padding span {
-  border-left: 1px solid var(--clr-neutral-700);
-  display: block;
-  padding: 1rem 0 1rem 1rem;
-}
-
-.phones {
-  margin: 2rem 0 0 4rem;
-  gap: 3.75rem;
-}
-.phones a {
-  --color: var(--clr-primary-900);
-}
-
-.accordion {
-  width: 100%;
-  position: relative;
-  transition: 0.2s ease;
-  cursor: pointer;
-}
-.accordion::after, .accordion::before {
-  content: "";
-  width: calc(100% + var(--inline-padding));
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-.accordion::after {
-  background-color: var(--clr-neutral-700);
-  height: 1px;
-}
-.accordion::before {
-  transition: 0.2s ease;
-  transform: scaleX(0);
-  transform-origin: left center;
-  height: 100%;
-  z-index: -1;
-  background-color: #f8f8f8;
-}
-.accordion img {
-  transform: rotate(90deg);
-  transition: 0.2s ease;
-  width: 2.875rem;
-}
-.accordion-title {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  padding: 1rem 0;
-  font-size: var(--fs-350);
-  font-weight: var(--fw-semi-medium);
-}
-.accordion-title div {
-  max-width: 935px;
-}
-.accordion-panel {
-  overflow: hidden;
-  max-height: 0;
-  transition: 0.2s ease;
-}
-.accordion.active img {
-  transform: rotate(0deg);
-}
-.accordion:hover::before {
-  transform: scaleX(1);
-}
-
-.speciality-wrapper {
-  margin: 8.125rem 0;
-}
-
-.table {
-  display: flex;
-  justify-content: space-between;
-  align-items: stretch;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  margin-bottom: 2rem;
-}
-.table .column {
-  max-width: 280px;
-  padding: 1.5625rem 0.75rem;
-  border-right: 1px solid var(--clr-neutral-700);
-}
-.table .column span {
-  font-weight: var(--fw-semi-medium);
-}
-.table .column div {
-  margin-top: 2rem;
-}
-.table .column:last-child {
-  border-right: none;
-}
-
-.file-card-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: stretch;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 100%;
-  gap: 1rem;
-  margin: 3.175rem auto;
+.position .fs-500 {
+  max-width: 550px;
 }
 
 .file-card {
   position: relative;
   color: var(--clr-neutral-1000);
-  width: clamp(280px, 50% - 0.5rem, 580px);
+  width: 30%;
+  min-width: 280px;
   background-color: var(--clr-primary-900);
   padding: 1.875rem 1.5625rem 1.2rem 1.5625rem;
   border-radius: 10px;
   margin-bottom: auto;
-}
-.file-card-link {
-  justify-content: flex-end;
 }
 .file-card.white {
   transition: 0.2s ease;
@@ -1443,31 +1143,39 @@ footer .contact.flex.start img {
 }
 .file-card.white .link {
   transition: 0.2s ease;
+  color: var(--clr-primary-900);
 }
 .file-card.white .link path {
   transition: 0.2s ease;
+  fill: var(--clr-primary-900);
 }
 .file-card.white:hover {
   color: var(--clr-neutral-1000);
   box-shadow: none;
   background-color: var(--clr-primary-900);
 }
+.file-card.white:hover img {
+  filter: brightness(100%);
+}
 .file-card.white:hover .file-card-title::after {
   background-color: var(--clr-neutral-1000);
 }
 .file-card.white:hover .link {
-  color: var(--clr-neutral-1000);
+  color: var(--clr-accent-700);
 }
 .file-card.white:hover .link svg {
   transform: rotate(45deg);
 }
 .file-card.white:hover .link path {
-  fill: var(--clr-neutral-1000);
+  fill: var(--clr-accent-700);
+}
+.file-card img {
+  width: 23px;
 }
 .file-card-title {
-  font-size: var(--fs-300);
+  font-size: var(--fw-100);
   display: inline-block;
-  font-weight: var(--fw-medium);
+  font-weight: var(--fw-semi-meidum);
   padding-bottom: 30px;
 }
 .file-card-title::after {
@@ -1481,44 +1189,6 @@ footer .contact.flex.start img {
   transform: translateY(-50%);
 }
 
-@media screen and (max-width: 770px) {
-  .info-in-the-end.flex {
-    flex-wrap: wrap-reverse;
-  }
-  .info-in-the-end.flex .padding {
-    padding-left: 0;
-    padding-top: 1rem;
-  }
-  .info-in-the-end.flex .phones {
-    margin-left: 0;
-    gap: 1rem;
-  }
-}
-@media screen and (max-width: 690px) {
-  .title {
-    margin-top: 70px;
-  }
-  .dn690 {
-    display: none;
-  }
-  .document-list li {
-    padding: 0 1rem 10px 2.5rem;
-  }
-  .document-list li::before {
-    left: 0;
-  }
-  .table {
-    flex-direction: column;
-  }
-  .table .column {
-    padding: 2rem 0.75rem;
-    border-right: none;
-    border-bottom: 1px solid var(--clr-neutral-700);
-  }
-  .table .column:last-child {
-    border-bottom: none;
-  }
-  .table .column div {
-    margin-top: 0.75rem;
-  }
+.president {
+  margin: 8rem 0;
 }
