--- a/css/style.css
+++ b/css/style.css
@@ -345,12 +345,19 @@ svg {
 }
 .block-title:not(.without)::after {
   content: "";
-  width: 200vw;
+  width: clamp(250px, 50vw, 510px);
+  max-width: 120%;
   height: 1px;
   background-color: var(--clr-primary-900);
   position: absolute;
   bottom: 0;
-  right: -15%;
+  left: calc(var(--inline-padding) * -1);
+}
+.block-title.white {
+  color: var(--clr-neutral-1000);
+}
+.block-title.white:not(.without)::after {
+  background-color: var(--clr-neutral-1000);
 }
 
 .header-middle,
@@ -942,11 +949,13 @@ footer .contact.flex.start img {
   align-items: center;
   flex-direction: row;
   flex-wrap: nowrap;
+  border: 1px solid transparent;
   background: var(--clr-dark-700);
   border-radius: 5px;
   transition: 0.2s ease;
 }
 .goUp:hover {
+  border-color: var(--clr-neutral-1000);
   border-radius: 50%;
 }
 .goUp:active {
