--- a/css/student.css
+++ b/css/student.css
@@ -97,6 +97,10 @@
   margin: 1.25rem 0;
 }
 
+.mY40 {
+  margin: 2.5rem 0;
+}
+
 .mY60 {
   margin: 3.75rem 0;
 }
@@ -125,6 +129,10 @@
   color: var(--clr-primary-900);
 }
 
+.clr-primary700 {
+  color: var(--clr-primary-700);
+}
+
 .clr-neutral {
   color: var(--clr-neutral-1000);
 }
@@ -139,6 +147,10 @@
 
 .fs-25 {
   font-size: var(--fs-25);
+}
+
+.fs-50 {
+  font-size: var(--fs-50);
 }
 
 .fs-200 {
@@ -1004,8 +1016,8 @@ footer .contact.flex.start img {
     transition: 0.2s ease;
     transition-delay: 0.5s ease;
     background-color: rgba(56, 91, 173, 0.6392156863);
-    -webkit-backdrop-filter: blur(20px);
-            backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(5px) saturate(50%);
+            backdrop-filter: blur(5px) saturate(50%);
   }
   header-component.open {
     background: var(--clr-neutral-1000);
@@ -1023,6 +1035,9 @@ footer .contact.flex.start img {
   footer .logo,
 .logo-image-link {
     display: none;
+  }
+  .footer-contacts.flex.spb.ais {
+    justify-content: flex-start;
   }
   .header-top .actual-header-top,
 .header-bottom {
@@ -1414,8 +1429,9 @@ footer .contact.flex.start img {
 }
 
 .phone {
+  max-width: 25rem;
   padding-left: 0.9375rem;
-  margin-bottom: 2.5rem;
+  margin-bottom: 1rem;
   font-size: var(--fs-50);
 }
 .phone span {
@@ -1508,6 +1524,46 @@ footer .contact.flex.start img {
 }
 .styled-list li {
   margin-top: 1rem;
+}
+
+.left-outside {
+  width: 100%;
+  padding: 3.4rem 3.4rem 3.4rem 1px;
+  position: relative;
+  border-radius: 0 10px 10px 0;
+}
+.left-outside::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: -50%;
+  transform: translate(calc(-50% + 1px));
+  background: var(--clr-primary-900);
+}
+.left-outside div {
+  max-width: 960px;
+}
+.left-outside div.mY20 {
+  font-weight: var(--fw-semi-medium);
+}
+
+.left-outside.blue {
+  background-color: var(--clr-primary-900);
+  color: var(--clr-neutral-1000);
+}
+
+ol.special {
+  list-style-position: inside;
+}
+
+.image_wrapper {
+  gap: 2rem;
+}
+.image_wrapper img {
+  flex: 1;
+  width: clamp(280px, 50% - var(--inline-padding), 50% - var(--inline-padding));
 }
 
 @media screen and (max-width: 784px) {
