--- a/css/variables.css
+++ b/css/variables.css
@@ -96,6 +96,10 @@
   margin: 1.25rem 0;
 }
 
+.mY40 {
+  margin: 2.5rem 0;
+}
+
 .mY60 {
   margin: 3.75rem 0;
 }
@@ -124,6 +128,10 @@
   color: var(--clr-primary-900);
 }
 
+.clr-primary700 {
+  color: var(--clr-primary-700);
+}
+
 .clr-neutral {
   color: var(--clr-neutral-1000);
 }
@@ -138,6 +146,10 @@
 
 .fs-25 {
   font-size: var(--fs-25);
+}
+
+.fs-50 {
+  font-size: var(--fs-50);
 }
 
 .fs-200 {
